--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "keywords": ["svn", "subversion", "tracking", "effort"],
   "homepage": "https://github.com/soundasleep/svntime",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "require": {
     "php": ">=5.2.3"
   },
